logOp fassert when creating namespace on stepped-down primary via createCollection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.0-rc9, 3.1.0
    • Affects Version/s: 3.0.0-rc8
    • Component/s: Replication
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This bug only seems to affect 3.0 and not 2.6.7.

      logOp() but can't accept write to collection test.$cmd
      Fatal Assertion 17405
      
      #0  0x00007f4bf999820b in raise (sig=5) at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c:37
      #1  0x00000000018caaf4 in mongo::breakpoint () at src/mongo/util/debugger.cpp:63
      #2  0x00000000018bfbac in mongo::fassertFailed (msgid=17405) at src/mongo/util/assert_util.cpp:165
      #3  0x00000000015ef58a in mongo::repl::(anonymous namespace)::_logOpRS (txn=0x7f4bd128b7d0, opstr=0x1f85608 "c", ns=0x42631e8 "test.$cmd", logNS=0x0, obj=..., o2=0x0, bb=0x0, fromMigrate=false) at src/mongo/db/repl/oplog.cpp:238
      #4  0x00000000015f048e in mongo::repl::logOp (txn=0x7f4bd128b7d0, opstr=0x1f85608 "c", ns=0x42631e8 "test.$cmd", obj=..., patt=0x0, b=0x0, fromMigrate=false) at src/mongo/db/repl/oplog.cpp:380
      #5  0x00000000012730db in mongo::userCreateNS (txn=0x7f4bd128b7d0, db=0x4150910, ns=..., options=..., logForReplication=true, createDefaultIndexes=true) at src/mongo/db/catalog/database.cpp:634
      #6  0x000000000133cb37 in mongo::CmdCreate::run (this=0x287f5a0 <mongo::cmdCreate>, txn=0x7f4bd128b7d0, dbname=..., cmdObj=..., errmsg=..., result=..., fromRepl=false) at src/mongo/db/dbcommands.cpp:613
      #7  0x00000000013376d7 in mongo::_execCommand (txn=0x7f4bd128b7d0, c=0x287f5a0 <mongo::cmdCreate>, dbname=..., cmdObj=..., queryOptions=0, errmsg=..., result=..., fromRepl=false) at src/mongo/db/dbcommands.cpp:1290
      #8  0x0000000001338654 in mongo::Command::execCommand (txn=0x7f4bd128b7d0, c=0x287f5a0 <mongo::cmdCreate>, queryOptions=0, cmdns=0x414ac14 "test.$cmd", cmdObj=..., result=..., fromRepl=false) at src/mongo/db/dbcommands.cpp:1506
      #9  0x0000000001338f33 in mongo::_runCommands (txn=0x7f4bd128b7d0, ns=0x414ac14 "test.$cmd", _cmdobj=..., b=..., anObjBuilder=..., fromRepl=false, queryOptions=0) at src/mongo/db/dbcommands.cpp:1578
      #10 0x000000000153c012 in mongo::runCommands (txn=0x7f4bd128b7d0, ns=0x414ac14 "test.$cmd", jsobj=..., curop=..., b=..., anObjBuilder=..., fromRepl=false, queryOptions=0) at src/mongo/db/query/find.cpp:137
      #11 0x000000000153e03a in mongo::runQuery (txn=0x7f4bd128b7d0, m=..., q=..., nss=..., curop=..., result=..., fromDBDirectClient=false) at src/mongo/db/query/find.cpp:606
      #12 0x0000000001443f36 in mongo::receivedQuery (txn=0x7f4bd128b7d0, c=..., dbresponse=..., m=..., fromDBDirectClient=false) at src/mongo/db/instance.cpp:220
      #13 0x00000000014450e0 in mongo::assembleResponse (txn=0x7f4bd128b7d0, m=..., dbresponse=..., remote=..., fromDBDirectClient=false) at src/mongo/db/instance.cpp:403
      #14 0x0000000001142708 in mongo::MyMessageHandler::process (this=0x3e0c130, m=..., port=0x4150f00, le=0x3e33980) at src/mongo/db/db.cpp:206
      #15 0x00000000018e8ce8 in mongo::PortMessageServer::handleIncomingMsg (arg=0x4150f00) at src/mongo/util/net/message_server_port.cpp:229
      #16 0x00007f4bf9990182 in start_thread (arg=0x7f4bd128c700) at pthread_create.c:312
      #17 0x00007f4bf8a9100d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: