SERVER-17208 do not proceed with collection creation on the primary when it is stepped down

(cherry picked from commit 7d392afddc79b48ffb69a63845f249a99375fcf8)